--- a/service.yml
+++ b/service.yml
@@ -1,9 +1,9 @@
 
 
-- import_playbook: "service.apache.yml"
 - import_playbook: "service.certbot.yml"
 - import_playbook: "service.ddclient.yml"
 - import_playbook: "service.docker.yml"
+- import_playbook: "service.httpd.yml"
 - import_playbook: "service.libvirt.yml"
 - import_playbook: "service.mysql.yml"
 - import_playbook: "service.php_fpm.yml"
