Include Okteta for Desktop Playbook

--- a/software.desktop.yml
+++ b/software.desktop.yml
@@ -15,6 +15,7 @@
       - "gimp"
       - "intel-media-driver"
       - "keepassxc"
+      - "okteta"
       - "qbittorrent"
       - "skanlite"
       - "vlc"
