Add User to Dialout Group in Arduino Playbook
To connect to arduino boards from the IDE, the user have to be
in dialout group. The playbook is updated to add configured users
to that group.

--- a/software.arduino.yml
+++ b/software.arduino.yml
@@ -15,4 +15,11 @@
             name: "https://dl.flathub.org/repo/appstream/cc.arduino.IDE2.flatpakref"
             state: "present"
 
+        - name: "Setup Arduion Development Tools: Add Users to Dialout Group"
+          ansible.builtin.user:
+            name: "{{ item }}"
+            groups: "dialout"
+            append: true
+          loop: "{{ software_arduino_users|default([]) }}"
+
 
