--- a/software.yml
+++ b/software.yml
@@ -1,20 +1,20 @@
 
 
-- import_playbook: "install.arduino.yml"
-- import_playbook: "install.chrome.yml"
-- import_playbook: "install.chromium.yml"
-- import_playbook: "install.console.yml"
-- import_playbook: "install.desktop.yml"
-- import_playbook: "install.firefox.yml"
-- import_playbook: "install.golang.yml"
-- import_playbook: "install.java.yml"
-- import_playbook: "install.node.yml"
-- import_playbook: "install.packaging.yml"
-- import_playbook: "install.php.yml"
-- import_playbook: "install.python.yml"
-- import_playbook: "install.skype.yml"
-- import_playbook: "install.steam.yml"
-- import_playbook: "install.wine.yml"
-- import_playbook: "install.zoom.yml"
+- import_playbook: "software.arduino.yml"
+- import_playbook: "software.chrome.yml"
+- import_playbook: "software.chromium.yml"
+- import_playbook: "software.console.yml"
+- import_playbook: "software.desktop.yml"
+- import_playbook: "software.firefox.yml"
+- import_playbook: "software.golang.yml"
+- import_playbook: "software.java.yml"
+- import_playbook: "software.node.yml"
+- import_playbook: "software.packaging.yml"
+- import_playbook: "software.php.yml"
+- import_playbook: "software.python.yml"
+- import_playbook: "software.skype.yml"
+- import_playbook: "software.steam.yml"
+- import_playbook: "software.wine.yml"
+- import_playbook: "software.zoom.yml"
 
 
