--- a/software.yml
+++ b/software.yml
@@ -5,12 +5,14 @@
 - import_playbook: "software.chromium.yml"
 - import_playbook: "software.console.yml"
 - import_playbook: "software.desktop.yml"
+- import_playbook: "software.fcitx.yml"
 - import_playbook: "software.firefox.yml"
 - import_playbook: "software.golang.yml"
 - import_playbook: "software.java.yml"
 - import_playbook: "software.node.yml"
 - import_playbook: "software.packaging.yml"
 - import_playbook: "software.php.yml"
+- import_playbook: "software.podman.yml"
 - import_playbook: "software.python.yml"
 - import_playbook: "software.skype.yml"
 - import_playbook: "software.steam.yml"
