Limits Mysql and PostgresSQL Playbooks to Install Only
Previously, mysql and postgresql playbooks install the database
servers and set them up as system services for tests and experiments
 Now the playbook is updated to install only. No system service is
configured. Instead, temporary servers can be launched manually
when needed.

--- a/software.yml
+++ b/software.yml
@@ -9,10 +9,12 @@
 - import_playbook: "software.firefox.yml"
 - import_playbook: "software.golang.yml"
 - import_playbook: "software.java.yml"
+- import_playbook: "software.mysql.yml"
 - import_playbook: "software.node.yml"
 - import_playbook: "software.packaging.yml"
 - import_playbook: "software.php.yml"
 - import_playbook: "software.podman.yml"
+- import_playbook: "software.postgresql.yml"
 - import_playbook: "software.python.yml"
 - import_playbook: "software.skype.yml"
 - import_playbook: "software.steam.yml"
