Expose SMART temperatures of Block Devices
A new linux kernel module, drivetemp, exposes hard drives that
support SMART as hwmon devices. It allows checking hard drive
temperature via lm_sensors.

This commit configures the system to load the module on boot.

--- a/hardware.blockdev.yml
+++ b/hardware.blockdev.yml
@@ -16,4 +16,12 @@
           - "smartmontools"
         state: "latest"
 
+    - name: "Configuring Block Devices: Expose SMART Temperature of Block Devices"
+      ansible.builtin.copy:
+        dest: "/etc/modules-load.d/blockdev.conf"
+        src: "{{ playbook_dir }}/files/etc/modules-load.d/blockdev.conf"
+        owner: "root"
+        group: "root"
+        mode: "0644"
+
 
