--- a/system.yml
+++ b/system.yml
@@ -1,6 +1,7 @@
 
 
 - import_playbook: "system.dnf.yml"
+- import_playbook: "system.driverctl.yml"
 - import_playbook: "system.firejail.yml"
 - import_playbook: "system.flatpak.yml"
 - import_playbook: "system.limits.yml"
