--- a/system.yml
+++ b/system.yml
@@ -1,5 +1,6 @@
 
 
+- import_playbook: "system.ansible.yml"
 - import_playbook: "system.dnf.yml"
 - import_playbook: "system.driverctl.yml"
 - import_playbook: "system.firejail.yml"
