Include Buildah in Podman Playbook
Since buildah is needed to build images for podman, it is added
to the playbook.

--- a/software.podman.yml
+++ b/software.podman.yml
@@ -8,6 +8,7 @@
 
     software_podman_packages:
       - "ansible-collection-containers-podman"
+      - "buildah"
       - "podman"
       - "podman-compose"
 
