--- a/service.yml
+++ b/service.yml
@@ -4,6 +4,7 @@
 - import_playbook: "service.ddclient.yml"
 - import_playbook: "service.httpd.yml"
 - import_playbook: "service.libvirt.yml"
+- import_playbook: "service.mosquitto.yml"
 - import_playbook: "service.php_fpm.yml"
 - import_playbook: "service.windows.yml"
 
