Add Lutris to List of Software Playbooks
The lutris playbook is missing from the overall software playbook.
It is added back.

--- a/software.yml
+++ b/software.yml
@@ -9,6 +9,7 @@
 - import_playbook: "software.firefox.yml"
 - import_playbook: "software.golang.yml"
 - import_playbook: "software.java.yml"
+- import_playbook: "software.lutris.yml"
 - import_playbook: "software.mysql.yml"
 - import_playbook: "software.node.yml"
 - import_playbook: "software.packaging.yml"
