Additional Software to be Installed for Users
Additional terminal and graphical applications are added to the
console and desktop software playbooks.

--- a/software.console.yml
+++ b/software.console.yml
@@ -19,8 +19,13 @@
       - "daa2iso"
       - "ffmpeg"
       - "git"
+      - "glances"
       - "htop"
       - "innoextract"
+      - "inxi"
+      - "jdupes"
+      - "jq"
+      - "lshw"
       - "mc"
       - "neofetch"
       - "nrg2iso"
@@ -28,16 +33,20 @@
       - "openssh"
       - "p7zip"
       - "p7zip-plugins"
+      - "ripgrep"
       - "rsync"
+      - "screen"
       - "socat"
       - "sqlite"
       - "sshfs"
       - "telnet"
+      - "tldr"
       - "tmux"
       - "unace"
       - "unrar"
       - "unrar-free"
       - "vim"
+      - "yt-dlp"
 
   tasks:
 
