Revamp to Manage Multiple Machines
The playbooks now have to manage multiple machines. Since the
machines use different operating systems from Fedora, Alma Linux
to OpenWRT, it is easier to write playbooks for each machine
instead of adding machine specific checks to existing playbooks.

This commit renames the existing playbooks by adding the prefix
"desktop" to indicate that the playbooks are intended for the
desktop machine.

--- a/desktop.service.windows.yml
+++ b/desktop.service.windows.yml
@@ -1,8 +1,8 @@
 
 
-#- import_playbook: "hardware.kvm.yml"
-#- import_playbook: "hardware.vfio.yml"
-#- import_playbook: "service.libvirt.yml"
+- import_playbook: "desktop.hardware.kvm.yml"
+- import_playbook: "desktop.hardware.vfio.yml"
+- import_playbook: "desktop.service.libvirt.yml"
 
 
 - hosts: "all"
