Move Playbook Specific Options to Playbook
Since each machine have its own copy of playbooks, there are no
reason to put playbook specific data in inventory. Therefore, such
data is moved to the playbook.

--- a/desktop.hardware.kvm.yml
+++ b/desktop.hardware.kvm.yml
@@ -4,6 +4,12 @@
   become: true
   become_user: "root"
 
+  vars:
+
+    hardware_kvm_ignore_msrs: true
+    hardware_kvm_amd_avic: true
+    hardware_kvm_amd_npt: true
+
   tasks:
 
     - name: "Configure Kernel-Based Virtual Machine: Enable Kernel Modules at Boot"
