--- a/desktop.service.certbot.yml
+++ b/desktop.service.certbot.yml
@@ -4,6 +4,10 @@
   become: true
   become_user: "root"
 
+  vars:
+
+    service_certbot_enabled: true
+
   tasks:
 
     - name: "Setup Certbot Service"
