--- a/desktop.software.postgresql.yml
+++ b/desktop.software.postgresql.yml
@@ -6,6 +6,8 @@
 
   vars:
 
+    software_postgresql_enabled: true
+
     software_postgresql_packages:
       - "postgresql"
       - "postgresql-contrib"
