--- a/desktop.software.arduino.yml
+++ b/desktop.software.arduino.yml
@@ -4,6 +4,11 @@
   become: true
   become_user: "root"
 
+  vars:
+
+    software_arduino_enabled: true
+    software_arduino_users: [ "kmchan" ]
+
   tasks:
 
     - name: "Setup Arduino"
