--- a/desktop.software.chrome.yml
+++ b/desktop.software.chrome.yml
@@ -4,6 +4,10 @@
   become: true
   become_user: "root"
 
+  vars:
+
+    software_chrome_enabled: true
+
   tasks:
 
     - name: "Setup Chrome Browser"
