--- a/desktop.software.chromium.yml
+++ b/desktop.software.chromium.yml
@@ -4,6 +4,10 @@
   become: true
   become_user: "root"
 
+  vars:
+
+    software_chromium_enabled: true
+
   tasks:
 
     - name: "Setup Chromium Browser"
