--- a/desktop.software.lutris.yml
+++ b/desktop.software.lutris.yml
@@ -4,6 +4,11 @@
   become: true
   become_user: "root"
 
+  vars:
+
+    software_lutris_enabled: true
+    software_lutris_directories: [ "/mnt/games" ]
+
   tasks:
 
     - name: "Setup Lutris"
