--- a/desktop.software.steam.yml
+++ b/desktop.software.steam.yml
@@ -4,6 +4,11 @@
   become: true
   become_user: "root"
 
+  vars:
+
+    software_steam_enabled: true
+    software_steam_directories: [ "/mnt/games" ]
+
   tasks:
 
     - name: "Setup Steam"
